v0.14
	* ADD : Support for multiple image layers (closes #1400)
	* CHG : Load Yahoo background as a whole rather than in pseudo-tile
	* FIX : Take layer tag into account for drawing priority (fixes #1792)
	* FIX : Relations were no more drawn according to style
    * ADD : Interactions help in the info dock
    * ADD : Generic polygons creation (closes #1808)
    * FIX : Never loose selection when ctrl- or shift-clicking (fixes #1793)
    * FIX : Allow move of multiple selected features
    * ADD : Rotate function
    * FIX : Give title to progress dialogs (fixes #1512)
    * ADD : WMS Editor: Display user-friendly layers/projection list based on capabilities
    * ADD : Display plain trackpoint description/comment in infodock if found (closes #1788)
	* FIX : First node of a new way not connected to existing way after upload (fixes #1774; fixes #1780)
	* CHG : Changed way to handle WMS. Should allow exotic projections and eliminate problems.
	* ADD : Create road junction function (closes #1661)
    * FIX : force the addition of children of imported features (might solve some "prerequisites" errors)
    * FIX : import & export JOSM compatible .osm (fixes #1163)
	* ADD : log file for debugging output
	* ADD : standard command-line arguments (-h, -v, ...) (fixes #1712)
    * FIX : Use application-wide proxy (fixes #1763)
    * ADD : Allow to specify a user/password for the proxy (untested by me)
    * FIX : Photo localization patch from Toby Speight.
	* FIX : Set version of newly uploaded objects at 1.
	* FIX : Graphical corruption on Intel chipsets when "Show downloaded areas" was enabled
	* FIX : API 0.6: Add features version number in MDC'es
	* FIX : API 0.6: Fix info dock links
	* FIX : Problem with "center" & "center & zoom" from the properties dock
	* FIX : API 0.6: Error when deleting a road with no nodes (fixes #1732)
    * FIX : Correctly handle plural forms in MapLayer information
    * FIX : API 0.6: Do not add "created_by" to changed features (fixes #1728)