@@ -15,7 +15,7 @@
 #include <math.h>
 
 CreatePolygonInteraction::CreatePolygonInteraction(MainWindow* aMain, MapView* aView, int sides)
-	: Interaction(aView), Main(aMain), Origin(0,0), HaveOrigin(false), Sides(sides), bAngle(0.0), bScale(QPointF(1., 1.))
+	: Interaction(aView), Main(aMain), Origin(0,0), Sides(sides), HaveOrigin(false), bAngle(0.0), bScale(QPointF(1., 1.))
 {
 }
 
