@@ -47,6 +47,11 @@ class LayerDock : public MDockAncestor
 	protected:
 		LayerDockPrivate* p;
 
+		void dragEnterEvent(QDragEnterEvent *event);
+		void dragMoveEvent(QDragMoveEvent *event);
+		void dragLeaveEvent(QDragLeaveEvent *event);
+		void dropEvent(QDropEvent *event);
+
 	private:
 		void changeEvent(QEvent*);
 		void retranslateUi();
