@@ -360,7 +360,7 @@ bool createJunction(MapDocument* theDocument, CommandList* theList, PropertiesDo
 				if (r.get_connection_type() == geometry::is_connect_no) {
 					ret = true;
 					if (doIt) {
-						TrackPoint* pt = new TrackPoint(Coord(theintersections[0].y(), theintersections[0].x()));
+						TrackPoint* pt = new TrackPoint(Coord(qRound(theintersections[0].y()), qRound(theintersections[0].x())));
 						theList->add(new AddFeatureCommand(theDocument->getDirtyOrOriginLayer(R1->layer()),pt,true));
 						theList->add(new RoadAddTrackPointCommand(R1,pt,i+1,theDocument->getDirtyOrOriginLayer(R1->layer())));
 						theList->add(new RoadAddTrackPointCommand(R2,pt,j+1,theDocument->getDirtyOrOriginLayer(R2->layer())));
