@@ -36,7 +36,7 @@ TEMPLATE = app
 TARGET = merkaartor
 
 CONFIG += rtti stl 
-CONFIG -= exceptions
+#CONFIG -= exceptions
 QT += svg network xml core gui
 
 !contains(NODEBUG,1) {
